--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
             </div>
         </nav>
         <section>
-                <div class="container">
-                    <h1 class="brand-title">Brand New <br> Group of Architects</h1>
-                    <p class="brand-description">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in <br> some form, by injected humour, or randomised words which
-                        don't look even</p>
-                    <button class="btn-primary">Explore More</button>
-                    <img src="images/banner.png" alt="">
-                </div>
+            <div class="container">
+                <h1 class="brand-title">Brand New <br> Group of Architects</h1>
+                <p class="brand-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in <br> some form, by injected humour, or randomised words which
+                    don't look even</p>
+                <button class="btn-primary">Explore More</button>
+                <img src="images/banner.png" alt="">
+            </div>
         </section>
     </header>
-    
+
     <main>
         <section>
             <div class="container-two">
@@ -46,13 +46,59 @@
                 </div>
                 <div class="grid-informations">
                     <h3 class="grid-title">
-                        <span class="ash">Quick list</span> <span class="black">of Our</span> <span class="orange">Features</span>
+                        <span class="ash">Quick list</span> <span class="black">of Our</span> <span
+                            class="orange">Features</span>
                     </h3>
-                    <p class="grid-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <p class="grid-description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't look even</p>
                     <button class="btn-primary">Explore More</button>
-                    
-                </div>            
+
+                </div>
             </div>
+        </section>
+
+        <section>
+            <div class="chinese">
+                <div class="chinese-writing">
+                    <div class="love">
+                        <hr>
+                        <h1 class="love-title">Features you will love & enjoy</h1>
+                    </div>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't look even</p>
+                    <div class="cards">
+                        <h4 class="card-title">Dexktop & Mobile Version</h4>
+                        <p class="description">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised...........
+                        </p>
+                    </div>
+                    <div class="cards">
+                        <h4 class="card-title">Drag & Drop Builder</h4>
+                        <p class="description">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised...........
+                        </p>
+                    </div>
+                    <div class="cards">
+                        <h4 class="card-title">Awesome Modern Design</h4>
+                        <p class="description">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised...........
+                        </p>
+                    </div>
+                    <div class="cards">
+                        <h4 class="card-title">Super Easy to Edit</h4>
+                        <p class="description">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised...........
+                        </p>
+                    </div>
+                </div>
+                <div class="chinese-img">
+                    <img src="images/architect.png" alt="">
+                </div>
+            </div>
+            <button class="btn-primary secondary"> <span class="ten-year">10+Year</span> <br><span class="experience">Experience</span>
+            </button>
         </section>
     </main>
 </body>
