--- a/index.html
+++ b/index.html
@@ -100,7 +100,67 @@
             <button class="btn-primary secondary"> <span class="ten-year">10+Year</span> <br><span class="experience">Experience</span>
             </button>
         </section>
+
+        <!-- facts  -->
+         <section>
+            <div class="facts">
+                <h2 class="fact-title">Some Facts</h2>
+                <p class="description fact">
+                    There are many variations of passages of Lorem Ipsum available, but  the majority have suffered alteration.
+                </p>
+                <div class="awards">
+                    <!-- 1 -->
+                    <div class="box">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h3>54</h3>
+                        <p>Awards Winnings</p>
+                    </div>
+                    <!-- 2 -->
+                    <div class="box">
+                        <img src="images/icons/projects.png " alt="">
+                        <h3>1458</h3>
+                        <p>Project Finished</p>
+                    </div>
+                    <!-- 3 -->
+                    <div class="box">
+                        <img src="images/icons/customers.png " alt="">
+                        <h3>590</h3>
+                        <p>Clients Worked</p>
+                    </div>
+                    <!-- 4 -->
+                    <div class="box">
+                        <img src="images/icons/email.png" alt="">
+                        <h3>22578</h3>
+                        <p>Email Send</p>
+                    </div>
+                </div>
+            </div>
+         </section>
+
+         <!-- sponsorship  -->
+          <section>
+            <div class="sponsorship">
+                <h2 class="sponsor-title">
+                    Our Sponsors
+                </h2>
+                <p class="description sponsor">
+                    There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.
+                </p>
+                <div class="sponsors">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/google.png " alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
+            </div>
+          </section>
     </main>
+    <footer>
+        <div class="footer">
+            <p class="footer-description">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
 </body>
 
 </html>
